cmake_minimum_required(VERSION 3.10)
project(xmlrcsd LANGUAGES C CXX)
find_package(Threads REQUIRED)
aux_source_directory(. SRC_LIST)
add_executable(${PROJECT_NAME} hiredis/async.c hiredis/dict.c hiredis/hiredis.c hiredis/net.c hiredis/sds.c ${SRC_LIST})
target_link_libraries (${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT})
